--- a/index.html
+++ b/index.html
@@ -5,8 +5,82 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="page-top">
+        <div class="header">
+            <img class="page-top-logo-pic" src="./img/Top-Logo.svg" alt="Top-Logo" height="40">
+            <ul class="menu">
+                <li class="menu-item">
+                    <a class="menu-item-link" href="#">Home</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-item-link" href="#">About Us</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-item-link" href="#">Services</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-item-link" href="#">Features</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-item-link" href="#">Team</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-item-link" href="#">Blog</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-item-link" href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+        <div class="page-top-content">
+            <div class="page-top-desc">
+                <h1 class="page-top-title">SEO & Digital Marketing For Your Website.</h1>
+                <p class="page-top-txt">Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</p>
+                <div class="page-top-wrp-btn">
+                    <button class="btn">Start Now</button>
+                    <button class="btn">Watch Video</button>
+                </div>
+            </div>
+        <img class="page-content-pic" src="./img/Page-Top-Content.svg" alt="Page-Top-Content" height="372.9">
+        </div>
+        <div class="page-top-logos">
+            <ul class="logos-list">
+                <li class="logos-list-item">
+                    <a href="#">
+                        <img src="./img/Logo-1.svg" alt="liva" height="50">
+                    </a>
+                </li>
+                <li class="logos-list-item">
+                    <a href="#">
+                        <img src="./img/Logo-2.svg" alt="kanba" height="50">
+                    </a>
+                </li>
+                <li class="logos-list-item">
+                    <a href="#">
+                        <img src="./img/Logo-3.svg" alt="amara" height="50">
+                    </a>
+                </li>
+                <li class="logos-list-item">
+                    <a href="#">
+                        <img src="./img/Logo-4.svg" alt="aven" height="50">
+                    </a>
+                </li>
+                <li class="logos-list-item">
+                    <a href="#">
+                        <img src="./img/Logo-5.svg" alt="HEXLAB" height="50">
+                    </a>
+                </li>
+                <li class="logos-list-item">
+                    <a href="#">
+                        <img src="./img/Logo-2.svg" alt="kanba">
+                    </a>
+                </li>
+            </ul>
+            
+        </div>
+    </div>
 </body>
 </html>
