--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Главная</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="page-top">
         <div class="header">
             <img class="page-top-logo-pic" src="./img/Top-Logo.svg" alt="Top-Logo" height="40">
-            <ul class="menu">
+            <ul class="menu center">
                 <li class="menu-item">
-                    <a class="menu-item-link" href="#">Home</a>
+                    <a class="menu-item-link orange" href="#">Home</a>
                 </li>
                 <li class="menu-item">
                     <a class="menu-item-link" href="#">About Us</a>
@@ -35,19 +36,19 @@
                 </li>
             </ul>
         </div>
-        <div class="page-top-content">
+        <div class="page-top-content center">
             <div class="page-top-desc">
                 <h1 class="page-top-title">SEO & Digital Marketing For Your Website.</h1>
                 <p class="page-top-txt">Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</p>
                 <div class="page-top-wrp-btn">
-                    <button class="btn">Start Now</button>
-                    <button class="btn">Watch Video</button>
+                    <button class="btn-start">Start Now</button>
+                    <button class="btn-watch">Watch Video</button>
                 </div>
             </div>
-        <img class="page-content-pic" src="./img/Page-Top-Content.svg" alt="Page-Top-Content" height="372.9">
+        <img class="page-content-pic" src="./img/Page-Top-Content.svg" alt="Page-Top-Content" height="373">
         </div>
         <div class="page-top-logos">
-            <ul class="logos-list">
+            <ul class="logos-list center">
                 <li class="logos-list-item">
                     <a href="#">
                         <img src="./img/Logo-1.svg" alt="liva" height="50">
