--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="page-top">
-        <div class="header">
+        <div class="header center">
             <img class="page-top-logo-pic" src="./img/Top-Logo.svg" alt="Top-Logo" height="40">
             <ul class="menu center">
                 <li class="menu-item">
