--- a/index.html
+++ b/index.html
@@ -83,5 +83,30 @@
             
         </div>
     </div>
+    <div class="values center">
+        <div class="value-top center">
+            <div class="value-top-item">
+                <div class="value-top-icon"></div>
+                <h5 class="value-top-title">Grow Your Business</h5>
+                <p class="value-top-txt">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+                <button class="value-top-btn">Read More...</button>
+            </div>
+            <div class="value-top-item-1">
+                <div class="value-top-icon"></div>
+                <h5 class="value-top-title">Get Quality Ieads</h5>
+                <p class="value-top-txt">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+                <button class="value-top-btn">Read More...</button>
+            </div>
+            <div class="value-top-item">
+                <div class="value-top-icon"></div>
+                <h5 class="value-top-title">Drive More Sales</h5>
+                <p class="value-top-txt">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+                <button class="value-top-btn">Read More...</button>
+            </div>
+        </div>
+    <div class="value-content">
+
+    </div>
+    </div>
 </body>
 </html>
