--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             
         </div>
     </div>
-    <div class="values center">
+    <div class="values">
         <div class="value-top center">
             <div class="value-top-item">
                 <div class="value-top-icon"></div>
@@ -104,8 +104,31 @@
                 <button class="value-top-btn">Read More...</button>
             </div>
         </div>
-    <div class="value-content">
-
+    <div class="value-content center">
+        <div class="value-text center">
+        <h3 class="value-center-title">Why You Should Choose Us.</h3>
+        <p class="value-center-txt">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary catalysts.</p>
+        </div>
+    <div class="value-content-logo center">
+        <div class="value-content-item">
+            <div class="value-content-icon"></div>
+            <h5 class="value-content-title">Keyword Research</h5>
+            <p class="value-content-txt">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+            <button class="value-content-btn">Learn More ></button>
+        </div>
+        <div class="value-content-item-1">
+            <div class="value-content-icon"></div>
+            <h5 class="value-content-title">Seo Optimazadion</h5>
+            <p class="value-content-txt">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+            <button class="value-content-btn">Learn More ></button>
+        </div>
+        <div class="value-content-item">
+            <div class="value-content-icon"></div>
+            <h5 class="value-content-title">Social Marketing</h5>
+            <p class="value-content-txt">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+            <button class="value-content-btn">Learn More ></button>
+        </div>
+    </div>
     </div>
     </div>
 </body>
